--- a/app/src/main/res/layout/activity_guide.xml
+++ b/app/src/main/res/layout/activity_guide.xml
@@ -1,35 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_guide"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+xmlns:tools="http://schemas.android.com/tools"
+android:id="@+id/activity_guide"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
 
-    tools:context="myapplication.beijingnews.activity.activity.GuideActivity">
-    <android.support.v4.view.ViewPager
-        android:id="@+id/viewpager"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-        <Button
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp"
-            android:text="开始体验"
-            android:textSize="20dp"
-            android:textColor="@drawable/btn_start_main_textcolor_selector"
-            android:background="@drawable/btn_start_main_selector"
-            android:id="@+id/btn_start_main"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="80dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+tools:context="myapplication.beijingnews.activity.activity.GuideActivity">
+<android.support.v4.view.ViewPager
+    android:id="@+id/viewpager"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"/>
+<Button
+    android:visibility="gone"
+    android:paddingLeft="20dp"
+    android:paddingRight="20dp"
+    android:text="开始体验"
+    android:textSize="20dp"
+    android:textColor="@drawable/btn_start_main_textcolor_selector"
+    android:background="@drawable/btn_start_main_selector"
+    android:id="@+id/btn_start_main"
+    android:layout_alignParentBottom="true"
+    android:layout_centerHorizontal="true"
+    android:layout_marginBottom="80dp"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content" />
+<RelativeLayout
+    android:layout_alignParentBottom="true"
+    android:layout_centerHorizontal="true"
+    android:layout_marginBottom="40dp"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
+
+
     <LinearLayout
         android:id="@+id/ll_group_point"
         android:orientation="horizontal"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="40dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"></LinearLayout>
+    <ImageView
+        android:src="@drawable/point_red"
+        android:id="@+id/iv_red_point"
+        android:layout_width="10dp"
+        android:layout_height="10dp" />
+</RelativeLayout>
 
 </RelativeLayout>
