--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_main2"
+    android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="myapplication.beijingnews.activity.activity.MainActivity">
-    <TextView
-        android:textSize="30dp"
-        android:text="主页面"
+    android:background="@drawable/splash_bg_newyear"
+    tools:context="myapplication.beijingnews.activity.WelcomeActivity">
+
+    <ImageView
+        android:layout_centerInParent="true"
+        android:src="@drawable/splash_sheep_newyear"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 </RelativeLayout>
