--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_main2"
+    android:id="@+id/fl_main"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="myapplication.beijingnews.activity.activity.MainActivity">
-    <TextView
-        android:textSize="30dp"
-        android:text="主页面"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-</RelativeLayout>
+    <android.support.v4.view.ViewPager
+       android:layout_weight="1"
+        android:layout_width="match_parent"
+        android:layout_height="0dp" />
+
+    <RadioGroup
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/bottom_tab_bg"
+        android:orientation="horizontal" >
+
+        <RadioButton
+            android:id="@+id/rb_content_fragment_home"
+            android:button="@android:color/transparent"
+            android:textSize="14sp"
+            style="@style/bottom_tab_style"
+            android:drawableTop="@drawable/bottom_tag_home_bg"
+            android:text="首页" />
+
+        <RadioButton
+            android:id="@+id/rb_content_fragment_newcenter"
+            style="@style/bottom_tab_style"
+            android:drawableTop="@drawable/bottom_tag_newscenter_bg"
+            android:text="新闻" />
+
+        <RadioButton
+            android:id="@+id/rb_content_fragment_smartservice"
+            style="@style/bottom_tab_style"
+            android:drawableTop="@drawable/bottom_tag_smartservice_bg"
+
+            android:text="智慧服务" />
+
+        <RadioButton
+            android:id="@+id/rb_content_fragment_govaffairs"
+            style="@style/bottom_tab_style"
+            android:drawableTop="@drawable/bottom_tag_govaffairs_bg"
+            android:text="政务" />
+
+        <RadioButton
+            android:id="@+id/rb_content_fragment_setting"
+            style="@style/bottom_tab_style"
+            android:drawableTop="@drawable/bottom_tag_setting_bg"
+            android:text="设置" />
+    </RadioGroup>
+
+</LinearLayout>
