--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,18 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="bottom_tab_style">
+        <item name="android:layout_gravity">center</item>
+        <item name="android:layout_width">0dip</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:background">@android:color/transparent</item>
+        <item name="android:gravity">center</item>
+        <item name="android:drawablePadding">5dip</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:button">@android:color/transparent</item>
+        <item name="android:textColor">@drawable/bottom_tag_textcolor</item>
+
+    </style>
+
 </resources>
