--- a/app/src/main/res/layout/activity_left.xml
+++ b/app/src/main/res/layout/activity_left.xml
@@ -2,12 +2,8 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:background="#44440000"
+    android:background="#000000"
     android:id="@+id/fl_left"
     android:layout_height="match_parent">
-    <TextView
-        android:gravity="center"
-        android:text="左侧菜单"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+
 </FrameLayout>
