--- a/app/src/main/res/layout/item_photos.xml
+++ b/app/src/main/res/layout/item_photos.xml
@@ -18,7 +18,7 @@
                 android:layout_height="160dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_weight="1"
-                android:scaleType="centerCrop"
+                android:scaleType="fitXY"
                 android:src="@drawable/pic_item_list_default" />
 
             <TextView
