--- a/app/src/main/res/layout/pager_photos_menu_detail.xml
+++ b/app/src/main/res/layout/pager_photos_menu_detail.xml
@@ -2,12 +2,17 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/refresh_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
     <android.support.v7.widget.RecyclerView
-            android:id="@+id/recyclerview"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+        android:id="@+id/recyclerview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+   </android.support.v4.widget.SwipeRefreshLayout>
 
-        <ProgressBar
+   <ProgressBar
 
             android:id="@+id/progressbar"
             android:layout_width="wrap_content"
